# cisco_task

./: .flake8  Dockerfile  Makefile  Readme.md  pyproject.toml
deploy/: run.sh
src/: main.py
src/api/: api.py
src/api/entrypoints/: cisco_task.py  diagnostics.py
src/cisco/: main.py
src/cisco/api/: app.py  routing.py
src/cisco/api/entrypoints/: cisco_task.py  diagnostics.py
src/cisco/api/models/: base.py
src/cisco/api/models/request/: cisco.py
src/cisco/api/models/response/: cisco.py  health.py
src/cisco/scraper/: utils.py
tests/static_analysis/: run_static_analysis.sh
tests/unit/test_api/: conftest.py
tests/unit/test_api/test_entrypoints/: test_cisco_task.py
tests/unit/test_scraper/: conftest.py  test_utils.py
