[tool.poetry]
name = "cisco_task"
version = "0.1.0"
description = ""
authors = ["Michal Ziolecki <michal.ziolecki.lp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"
requests = "^2.27.1"
types-requests = "^2.27.27"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
force_sort_within_sections = "True"
ensure_newline_before_comments = "True"
line_length = "120"
multi_line_output = "3"
force_grid_wrap = "0"
indent = "4"
use_parentheses = "True"
include_trailing_comma = "True"
lines_after_imports = "2"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
profile = "black"
skip = ".git,.mypy_cache,.venv,buck-out,build,dist"

[tool.mypy]
no_strict_optional = "true"
ignore_missing_imports = "true"
